# letterboxed-solver-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
bot/: __init__.py  bot.py  default.py  handlers.py
ocr/: __init__.py  imageregion.py  ocr.py  utils.py
solver/: __init__.py  solver.py  utils.py
