[tool.poetry]
name = "letterboxed-telegram"
version = "0.1.0"
description = ""
authors = ["Alexander Sevostianov <sevostianov@ecopsy.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
aiogram = "^3.5.0"
pytesseract = "^0.3.10"
scikit-image = "^0.23.2"


[tool.poetry.group.tests.dependencies]
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
